@@ -24,6 +24,7 @@ import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import com.publicissapient.kpidashboard.apis.constant.Constant;
 import com.publicissapient.kpidashboard.apis.repotools.model.RepoToolConnModel;
 import com.publicissapient.kpidashboard.apis.repotools.model.RepoToolConnectionDetail;
@@ -179,7 +180,7 @@ public class RepoToolsConfigServiceImpl {
 			List<ProjectToolConfig> projectToolConfigList = projectRepos.stream()
 					.filter(projectToolConfig -> projectToolConfig.getBasicProjectConfigId()
 							.equals(new ObjectId(basicProjectconfigIdList.get(0))))
-					.collect(Collectors.toList());
+					.toList();
 			if (CollectionUtils.isNotEmpty(projectToolConfigList)) {
 				String projectCode = createProjectCode(basicProjectconfigIdList.get(0));
 
@@ -248,6 +249,8 @@ public class RepoToolsConfigServiceImpl {
 		return httpStatus == HttpStatus.OK.value();
 	}
 
+
+
 	/**
 	 * get metrics from repo tool kpis fo different projects
 	 * 
@@ -264,14 +267,13 @@ public class RepoToolsConfigServiceImpl {
 		String repoToolApiKey = customApiConfig.getRepoToolAPIKey();
 		List<RepoToolKpiMetricResponse> repoToolKpiMetricRespons = new ArrayList<>();
 		RepoToolKpiRequestBody repoToolKpiRequestBody = new RepoToolKpiRequestBody(
-				projectCode.stream().map(code -> code.replaceAll("\\s", "")).collect(Collectors.toList()), startDate,
+				projectCode.stream().map(code -> code.replaceAll("\\s", "")).toList(), startDate,
 				endDate, frequency);
 		try {
 			String url = String.format(repoToolUrl, startDate, endDate, frequency);
 			RepoToolKpiBulkMetricResponse repoToolKpiBulkMetricResponse = repoToolsClient.kpiMetricCall(url,
 					repoToolApiKey, repoToolKpiRequestBody);
-			repoToolKpiMetricRespons = repoToolKpiBulkMetricResponse.getValues().stream().flatMap(List::stream)
-					.collect(Collectors.toList());
+			repoToolKpiMetricRespons = repoToolKpiBulkMetricResponse.getValues().stream().flatMap(List::stream).toList();
 		} catch (Exception ex) {
 			log.error("Exception while fetching KPI data {}", projectCode, ex);
 		}
@@ -372,6 +374,20 @@ public class RepoToolsConfigServiceImpl {
 			log.error("Exception occcured while updating conneection  {}", repoToolConnectionDetails, ex);
 		}
 		return HttpStatus.BAD_REQUEST.value();
+	}
+
+	/**
+	 * get repository members from repo tool
+	 *
+	 * @param basicProjectConfigId
+	 * 		basic project config id
+	 * @return list of repo members
+	 */
+	public JsonNode getProjectRepoToolMembers(String basicProjectConfigId) {
+		String projectCode = createProjectCode(basicProjectConfigId);
+		String membersUrl = customApiConfig.getRepoToolURL() + String.format(customApiConfig.getRepoToolMembersUrl(),
+				projectCode);
+		return repoToolsClient.fetchProjectRepoToolMembers(membersUrl, customApiConfig.getRepoToolAPIKey());
 	}
 
 }
